test: UserServiceTest 검증 로직 assertAll로 변경